# Gtk4-libadwaita-cmake

./: CMakeLists.txt  main.cpp
